--- a/gear/apoe_transformer/src/docker/BUILD
+++ b/gear/apoe_transformer/src/docker/BUILD
@@ -2,5 +2,8 @@ file(name="manifest", source="manifest.json")
 
 docker_image(name="apoe-transformer",
              source="Dockerfile",
-             dependencies=[":manifest", "gear/apoe_transformer/src/python/apoe_transformer_app:bin"],
+             dependencies=[
+                 ":manifest",
+                 "gear/apoe_transformer/src/python/apoe_transformer_app:bin"
+             ],
              image_tags=["0.1.0", "latest"])
