--- a/gear/csv_center_splitter/src/docker/manifest.json
+++ b/gear/csv_center_splitter/src/docker/manifest.json
@@ -50,6 +50,11 @@
             "description": "Target project to write the split results to",
             "type": "string"
         },
+        "allow_merged_cells": {
+            "description": "Allow merged cells; if a row is missing an ADCID it assumes it's the same as the previous row(s)",
+            "type": "boolean",
+            "default": false
+        },
         "delimiter": {
             "description": "The input file delimiter",
             "type": "string",
