Move form-specific csv to json transformer to separate gear

--- a/gear/form_csv_to_json_transformer/src/docker/manifest.json
+++ b/gear/form_csv_to_json_transformer/src/docker/manifest.json
@@ -18,7 +18,7 @@
             "image": "naccdata/form-csv-to-json-transformer:0.0.1"
         },
         "flywheel": {
-            "suite": "NACC Admin Gears",
+            "suite": "Curation",
             "show-job": true
         }
     },
@@ -27,8 +27,18 @@
             "base": "api-key"
         },
         "input_file": {
-            "description": "The project YAML file",
+            "description": "a CSV file with NACCIDs",
             "base": "file",
+            "type": {
+                "enum": [
+                    "tabular data"
+                ]
+            }
+        },
+        "transform_file": {
+            "description": "a JSON file with transform data",
+            "base": "file",
+            "optional": true,
             "type": {
                 "enum": [
                     "source code"
@@ -37,20 +47,10 @@
         }
     },
     "config": {
-        "dry_run": {
-            "description": "Whether to do a dry run",
-            "type": "boolean",
-            "default": false
-        },
         "admin_group": {
             "description": "Name of the admin group",
             "type": "string",
             "default": "nacc"
-        },
-        "new_only": {
-            "description": "Only create projects for centers tagged as new",
-            "type": "boolean",
-            "default": false
         },
         "apikey_path_prefix": {
             "description": "The instance specific AWS parameter path prefix for apikey",
