Update module label - remove version

--- a/gear/identifier_provisioning/src/docker/manifest.json
+++ b/gear/identifier_provisioning/src/docker/manifest.json
@@ -55,7 +55,7 @@
         "enrollment_module": {
             "description": "Enrollment form module name",
             "type": "string",
-            "default": "enrollv1"
+            "default": "enroll"
         }
     },
     "command": "/bin/run"
