--- a/gear/form_csv_to_json_transformer/src/docker/manifest.json
+++ b/gear/form_csv_to_json_transformer/src/docker/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "csv-to-json-transformer",
-    "label": "CSV to JSON Transformer",
-    "description": "Converts rows of CSV file to JSON files",
-    "version": "0.0.11",
+    "name": "form-csv-to-json-transformer",
+    "label": "Form CSV to JSON Transformer",
+    "description": "Form specific transformation from CSV to JSON",
+    "version": "0.0.1",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/csv-to-json-transformer:0.0.11"
+            "image": "naccdata/form-csv-to-json-transformer:0.0.1"
         },
         "flywheel": {
             "suite": "Curation",
@@ -34,37 +34,29 @@
                     "tabular data"
                 ]
             }
+        },
+        "transform_file": {
+            "description": "a JSON file with transform data",
+            "base": "file",
+            "optional": true,
+            "type": {
+                "enum": [
+                    "source code"
+                ]
+            }
         }
     },
     "config": {
-        "apikey_path_prefix": {
-            "description": "The instance specific AWS parameter path prefix for apikey",
-            "type": "string",
-            "default": "/prod/flywheel/gearbot"
-        },
         "admin_group": {
             "description": "Name of the admin group",
             "type": "string",
             "default": "nacc"
         },
-        "hierarchy_labels" : {
-            "description": "the string templates for session/acquisition/filename",
-            "type": "object",
-            "default": [ 
-                {
-                    "type": "session",
-                    "template": ""
-                },
-                {
-                    "type": "acquisition",
-                    "template": "",
-                    "transform": "upper"
-                },
-                {
-                    "type": "filename",
-                    "template": ""
-                }
-            ]
+        "apikey_path_prefix": {
+            "description": "The instance specific AWS parameter path prefix for apikey",
+            "type": "string",
+            "default": "/prod/flywheel/gearbot"
+
         }
     },
     "command": "/bin/run"
