Update gear references to use csv-subject-splitter

--- a/gear/csv_to_json_splitter/csv_to_json_transformer/src/docker/manifest.json
+++ b/gear/csv_to_json_splitter/csv_to_json_transformer/src/docker/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "csv-to-json-transformer",
+    "name": "csv-subject-splitter",
     "label": "CSV to JSON Transformer",
     "description": "Converts rows of CSV file to JSON files",
     "version": "0.0.11",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/csv-to-json-transformer:0.0.11"
+            "image": "naccdata/csv-subject-splitter:0.0.11"
         },
         "flywheel": {
             "suite": "Curation",
