--- a/gear/csv_to_json_splitter/csv_to_json_transformer/src/docker/BUILD
+++ b/gear/csv_to_json_splitter/csv_to_json_transformer/src/docker/BUILD
@@ -1,9 +1,9 @@
 file(name="manifest", source="manifest.json")
 
-docker_image(name="csv-to-json-transformer",
+docker_image(name="csv-subject-splitter",
              source="Dockerfile",
              dependencies=[
                  ":manifest",
-                 "gear/csv_to_json_transformer/src/python/csv_app:bin"
+                 "gear/csv_subject_splitter/src/python/csv_app:bin"
              ],
              image_tags=["0.0.11", "latest"])
