--- a/gear/csv_to_json_splitter/csv_to_json_transformer/src/docker/Dockerfile
+++ b/gear/csv_to_json_splitter/csv_to_json_transformer/src/docker/Dockerfile
@@ -5,7 +5,7 @@ RUN mkdir -p ${BASE_DIR}/input
 
 WORKDIR ${BASE_DIR}
 
-COPY gear/csv_to_json_transformer/src/docker/manifest.json ${BASE_DIR}
-COPY gear.csv_to_json_transformer.src.python.csv_app/bin.pex /bin/run
+COPY gear/csv_subject_splitter/src/docker/manifest.json ${BASE_DIR}
+COPY gear.csv_subject_splitter.src.python.csv_app/bin.pex /bin/run
 
 ENTRYPOINT [ "/bin/run" ]
