Uplate gear references for form-transformer

--- a/gear/form_transformer/src/docker/manifest.json
+++ b/gear/form_transformer/src/docker/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "form-csv-to-json-transformer",
+    "name": "form-transformer",
     "label": "Form CSV to JSON Transformer",
     "description": "Form specific transformation from CSV to JSON",
     "version": "0.0.1",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/form-csv-to-json-transformer:0.0.1"
+            "image": "naccdata/form-transformer:0.0.1"
         },
         "flywheel": {
             "suite": "Curation",
