--- a/gear/form_transformer/src/docker/Dockerfile
+++ b/gear/form_transformer/src/docker/Dockerfile
@@ -5,7 +5,7 @@ RUN mkdir -p ${BASE_DIR}/input
 
 WORKDIR ${BASE_DIR}
 
-COPY gear/form_csv_to_json_transformer/src/docker/manifest.json ${BASE_DIR}
-COPY gear.form_csv_to_json_transformer.src.python.form_csv_app/bin.pex /bin/run
+COPY gear/form_transformer/src/docker/manifest.json ${BASE_DIR}
+COPY gear.form_transformer.src.python.form_csv_app/bin.pex /bin/run
 
 ENTRYPOINT [ "/bin/run" ]
