--- a/gear/form_transformer/src/docker/BUILD
+++ b/gear/form_transformer/src/docker/BUILD
@@ -1,10 +1,9 @@
 file(name="manifest", source="manifest.json")
 
-docker_image(
-    name="form-transformer",
-    source="Dockerfile",
-    dependencies=[
-        ":manifest",
-        "gear/form_transformer/src/python/form_csv_app:bin"
-    ],
-    image_tags=["0.0.1", "latest"])
+docker_image(name="form-transformer",
+             source="Dockerfile",
+             dependencies=[
+                 ":manifest",
+                 "gear/form_transformer/src/python/form_csv_app:bin"
+             ],
+             image_tags=["0.0.1", "latest"])
