--- a/gear/csv_subject_splitter/src/docker/manifest.json
+++ b/gear/csv_subject_splitter/src/docker/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "csv-subject-splitter",
-    "label": "CSV to JSON Transformer",
-    "description": "Converts rows of CSV file to JSON files",
+    "label": "CSV Subject Splitter",
+    "description": "Converts rows of CSV file to subject JSON files based on NACCID",
     "version": "0.0.11",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
@@ -50,21 +50,20 @@
         "hierarchy_labels" : {
             "description": "the string templates for session/acquisition/filename",
             "type": "object",
-            "default": [ 
-                {
-                    "type": "session",
-                    "template": ""
-                },
-                {
-                    "type": "acquisition",
-                    "template": "",
+            "default": {
+                "session": {
+                    "template": "filename",
                     "transform": "upper"
                 },
-                {
-                    "type": "filename",
-                    "template": ""
+                "acquisition": {
+                    "template": "filename",
+                    "transform": "upper"
+                },
+                "filename": {
+                    "template": "filename",
+                    "transform": "lower"
                 }
-            ]
+            }
         }
     },
     "command": "/bin/run"
