--- a/gear/csv_subject_splitter/src/docker/manifest.json
+++ b/gear/csv_subject_splitter/src/docker/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "form-csv-to-json-transformer",
-    "label": "Form CSV to JSON Transformer",
-    "description": "Form specific transformation from CSV to JSON",
-    "version": "0.0.1",
+    "name": "csv-subject-splitter",
+    "label": "CSV Subject Splitter",
+    "description": "Converts rows of CSV file to subject JSON files based on NACCID",
+    "version": "1.0.0",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/form-csv-to-json-transformer:0.0.1"
+            "image": "naccdata/csv-subject-splitter:1.0.0"
         },
         "flywheel": {
             "suite": "Curation",
@@ -34,29 +34,26 @@
                     "tabular data"
                 ]
             }
-        },
-        "transform_file": {
-            "description": "a JSON file with transform data",
-            "base": "file",
-            "optional": true,
-            "type": {
-                "enum": [
-                    "source code"
-                ]
-            }
         }
     },
     "config": {
-        "admin_group": {
-            "description": "Name of the admin group",
-            "type": "string",
-            "default": "nacc"
-        },
-        "apikey_path_prefix": {
-            "description": "The instance specific AWS parameter path prefix for apikey",
-            "type": "string",
-            "default": "/prod/flywheel/gearbot"
-
+        "hierarchy_labels" : {
+            "description": "the string templates for session/acquisition/filename",
+            "type": "object",
+            "default": {
+                "session": {
+                    "template": "filename",
+                    "transform": "upper"
+                },
+                "acquisition": {
+                    "template": "filename",
+                    "transform": "upper"
+                },
+                "filename": {
+                    "template": "filename",
+                    "transform": "lower"
+                }
+            }
         }
     },
     "command": "/bin/run"
