--- a/gear/legacy_identifier_transfer/src/docker/BUILD
+++ b/gear/legacy_identifier_transfer/src/docker/BUILD
@@ -1,6 +1,10 @@
 file(name="manifest", source="manifest.json")
 
-docker_image(name="legacy-identifier-transfer",
-             source="Dockerfile",
-             dependencies=[":manifest", "gear/legacy_identifier_transfer/src/python/legacy_identifier_transfer_app:bin"],
-             image_tags=["0.0.1", "latest"])
+docker_image(
+    name="legacy-identifier-transfer",
+    source="Dockerfile",
+    dependencies=[
+        ":manifest",
+        "gear/legacy_identifier_transfer/src/python/legacy_identifier_transfer_app:bin"
+    ],
+    image_tags=["0.0.1", "latest"])
