--- a/.github/workflows/pants.yml
+++ b/.github/workflows/pants.yml
@@ -48,6 +48,7 @@ jobs:
       run: |
         pants lint ::
         pants check ::
+      continue-on-error: true
     - name: Test
       run: |
         pants test ::
