--- a/.github/workflows/pants.yml
+++ b/.github/workflows/pants.yml
@@ -48,7 +48,7 @@ jobs:
       run: |
         pants lint ::
         pants check ::
-      continue-on-error: true
     - name: Test
+      if: always()
       run: |
         pants test ::
