--- a/gear/form_qc_checker/src/docker/manifest.json
+++ b/gear/form_qc_checker/src/docker/manifest.json
@@ -2,7 +2,7 @@
     "name": "form-qc-checker",
     "label": "Form QC Checker",
     "description": "Gear to check form data as JSON with QC rule set",
-    "version": "1.0.4",
+    "version": "1.1.0",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/form-qc-checker:1.0.4"
+            "image": "naccdata/form-qc-checker:1.1.0"
         },
         "flywheel": {
             "suite": "Curation",
@@ -71,6 +71,11 @@
             "description": "Variable name of the visit date field for the module (used to sort the participant visits)",
             "type": "string",
             "default": "visitdate"
+        },
+        "admin_group": {
+            "description": "Name of the admin group",
+            "type": "string",
+            "default": "nacc"
         },
         "tag": {
             "description": "The tag to be added on input file upon job completion.",
