--- a/gear/identifier_lookup/src/docker/manifest.json
+++ b/gear/identifier_lookup/src/docker/manifest.json
@@ -2,7 +2,7 @@
     "name": "identifier-lookup",
     "label": "NACC ID Lookup",
     "description": "Gear to check for NACC ID for incoming data",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/identifier-lookup:0.0.4"
+            "image": "naccdata/identifier-lookup:0.0.5"
         },
         "flywheel": {
             "suite": "NACC Data Gears",
@@ -47,7 +47,7 @@
             "type": "string",
             "default": "nacc"
         },
-        "identifier_mode": {
+        "database_mode": {
             "description": "Whether to create identifiers in dev or prod database",
             "type": "string",
             "default": "prod"
