--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,6 +29,7 @@
             "extensions": [
                 "ms-python.python",
                 "ms-azuretools.vscode-docker",
+                "streetsidesoftware.code-spell-checker",                
                 "yzhang.markdown-all-in-one"
                 // "mermaidchart.vscode-mermaid-chart"
             ]
