Identifier gears update (#142)
* Change `identifier_mode` gear config to `database_mode`

* Change enrollment session/acquisition labels

* Fix bug in retrieving transfers metadata

* Add ADCID check

* Fix retrieving transfer metadata

* Add defaults to optional transferrecord fields

* Format redcap test

* Add test for serialization of transferrecord

* Revert specifying transfers key

* Add filename creation

* refactor header checks

* reuse CenterValidator

* Update provisioning gear version

* Update tests to match changes

---------

Co-authored-by: Ben Keller <bjkeller@vt.edu>

--- a/gear/identifier_provisioning/src/docker/manifest.json
+++ b/gear/identifier_provisioning/src/docker/manifest.json
@@ -2,7 +2,7 @@
     "name": "identifier-provisioning",
     "label": "Identifier Provisioning",
     "description": "Gear for provisioning NACCIDs from Enrollment forms",
-    "version": "0.1.7",
+    "version": "1.0.0",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/identifier-provisioning:0.1.7"
+            "image": "naccdata/identifier-provisioning:1.0.0"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
@@ -37,7 +37,7 @@
         }
     },
     "config": {
-        "identifier_mode": {
+        "database_mode": {
             "description": "Whether to create identifiers in dev or prod database",
             "type": "string",
             "default": "dev"
