Clean up during run

--- a/gear/apoe_transformer/src/docker/manifest.json
+++ b/gear/apoe_transformer/src/docker/manifest.json
@@ -61,6 +61,12 @@
             "description": "If running from a local file; if True, then target target_project_id must be provided",
             "type": "boolean",
             "default": false
+        },
+        "apikey_path_prefix": {
+            "description": "The instance specific AWS parameter path prefix for apikey",
+            "type": "string",
+            "default": "/prod/flywheel/gearbot"
+
         }
     },
     "command": "/bin/run"
