Add words to local dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,11 @@
     },
     "editor.detectIndentation": false,
     "cSpell.words": [
+        "adcid",
+        "apoe",
         "devcontainer",
-        "NACC"
+        "NACC",
+        "naccid",
+        "ptid"
     ]
 }
