Add mapping direction for identifier lookup

--- a/gear/identifier_lookup/src/docker/manifest.json
+++ b/gear/identifier_lookup/src/docker/manifest.json
@@ -56,6 +56,11 @@
             "description": "The instance specific AWS parameter gearbot path prefix",
             "type": "string",
             "default": "/prod/flywheel/gearbot"
+        },
+        "direction": {
+            "description": "Direction of identifier mapping: to nacc, or to center",
+            "type": "string",
+            "default": "nacc"
         }
     },
     "command": "/bin/run"
