Error metadata updates (#150)
* Add error log and metadata updates

* Move error logging to outputs.errors

* Update error reporting in form-qc-checker

* Change to log JSON error objects

* Refactor empty_field_error

* update enrollment form error reporting

* Normalize visit date format

* Update identifier-lookup error reporting

* Fix formatting

* Update qc gear configs in qc-coordinator

* Fix tests

* Update form-transformer error reporting

* Update gear versions

* Fix copying error metadata

* Update form-qc-coordinator error reporting

* re-order import block

* Fix linting issues

* More formatting fixes

* Fix type checks

* Update identifier-provisioning error reporting

* Update changelog and gear versions

--- a/gear/form_qc_checker/src/docker/manifest.json
+++ b/gear/form_qc_checker/src/docker/manifest.json
@@ -2,7 +2,7 @@
     "name": "form-qc-checker",
     "label": "Form QC Checker",
     "description": "Gear to check form data as JSON with QC rule set",
-    "version": "1.1.7",
+    "version": "1.2.0",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/form-qc-checker:1.1.7"
+            "image": "naccdata/form-qc-checker:1.2.0"
         },
         "flywheel": {
             "suite": "Curation",
@@ -68,7 +68,7 @@
             "default": "retrospective-form"
         },
         "date_field": {
-            "description": "Variable name of the visit date field for the module (used to sort the participant visits)",
+            "description": "Variable name of the visit date field for the module",
             "type": "string",
             "default": "visitdate"
         },
@@ -76,11 +76,6 @@
             "description": "Name of the admin group",
             "type": "string",
             "default": "nacc"
-        },
-        "tag": {
-            "description": "The tag to be added on input file upon job completion.",
-            "type": "string",
-            "default": "form-qc-checker"
         }
     },
     "command": "/bin/run"
