--- a/gear/identifier_lookup/src/docker/manifest.json
+++ b/gear/identifier_lookup/src/docker/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "identifier-lookup",
-    "label": "NACC ID Lookup",
-    "description": "Gear to check for NACC ID for incoming data",
-    "version": "0.1.0",
+    "label": "Identifier Lookup",
+    "description": "Gear to look up participant identifiers for incoming data",
+    "version": "1.0.3",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/identifier-lookup:0.1.0"
+            "image": "naccdata/identifier-lookup:1.0.3"
         },
         "flywheel": {
             "suite": "NACC Data Gears",
@@ -27,7 +27,7 @@
             "base": "api-key"
         },
         "input_file": {
-            "description": "The CSV input file. Each row must have ADCID and PTID",
+            "description": "The CSV input file. Requires participant ID that matches mapping direction.",
             "base": "file",
             "type": {
                 "enum": [
@@ -61,6 +61,11 @@
             "description": "Variable name of the visit date field for the module",
             "type": "string",
             "default": "visitdate"
+        },
+        "direction": {
+            "description": "Direction of identifier mapping; 'nacc' to naccid, or 'center' to center",
+            "type": "string",
+            "default": "nacc"
         }
     },
     "command": "/bin/run"
