--- a/gear/prescreening/src/docker/manifest.json
+++ b/gear/prescreening/src/docker/manifest.json
@@ -2,7 +2,7 @@
     "name": "prescreening",
     "label": "Prescreening",
     "description": "Prescreens input files to queue for form-scheduler gear",
-    "version": "0.1.0",
+    "version": "0.0.3",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/prescreening:0.1.0"
+            "image": "naccdata/prescreening:0.0.3"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
@@ -34,16 +34,20 @@
                     "tabular data"
                 ]
             }
+        },
+        "scheduler_gear_configs_file": {
+            "description": "JSON file with scheduler gear config information",
+            "base": "file",
+            "type": {
+                "enum": [
+                    "source code"
+                ]
+            }
         }
     },
     "config": {
         "dry_run": {
             "description": "Whether to do a dry run",
-            "type": "boolean",
-            "default": false
-        },
-        "local_run": {
-            "description": "Whether or not to do a local run",
             "type": "boolean",
             "default": false
         },
