--- a/gear/form_screening/src/docker/BUILD
+++ b/gear/form_screening/src/docker/BUILD
@@ -1,9 +1,9 @@
 file(name="manifest", source="manifest.json")
 
-docker_image(name="prescreening",
+docker_image(name="form-screening",
              source="Dockerfile",
              dependencies=[
                  ":manifest",
-                 "gear/prescreening/src/python/prescreening_app:bin"
+                 "gear/form_screening/src/python/form_screening_app:bin"
              ],
              image_tags=["0.0.3", "latest"])
