--- a/gear/form_screening/src/python/form_screening_app/BUILD
+++ b/gear/form_screening/src/python/form_screening_app/BUILD
@@ -1,3 +1,3 @@
-python_sources(name="prescreening_app", )
+python_sources(name="form_screening_app", )
 
 pex_binary(name="bin", entry_point="run.py")
