--- a/gear/form_scheduler/src/docker/BUILD
+++ b/gear/form_scheduler/src/docker/BUILD
@@ -2,5 +2,8 @@ file(name="manifest", source="manifest.json")
 
 docker_image(name="form-scheduler",
              source="Dockerfile",
-             dependencies=[":manifest", "gear/form_scheduler/src/python/form_scheduler_app:bin"],
+             dependencies=[
+                 ":manifest",
+                 "gear/form_scheduler/src/python/form_scheduler_app:bin"
+             ],
              image_tags=["0.0.1", "latest"])
