--- a/gear/form_screening/src/data/form-scheduler-configs.json
+++ b/gear/form_screening/src/data/form-scheduler-configs.json
@@ -1,9 +1,11 @@
 {
     "gear_name": "form-scheduler",
     "configs": {
+        "submission_pipeline": "file-validator,identifier-lookup,form-transformer,form-qc-coordinator,form-qc-checker",
+        "accepted_modules": "ENROLL,UDS,FTLD,LBD",
         "prioritized_modules": "UDS",
-        "queue_tags": "queued",
-        "send_email": true,
+        "queue_tags": "adcid-999",
+        "source_email": "",
         "apikey_path_prefix": "/sandbox/flywheel/gearbot",
         "dry_run": false
     }
