--- a/gear/form_screening/src/data/form-scheduler-configs.json
+++ b/gear/form_screening/src/data/form-scheduler-configs.json
@@ -2,8 +2,7 @@
     "gear_name": "form-scheduler",
     "configs": {
         "submission_pipeline": "file-validator,identifier-lookup,form-transformer,form-qc-coordinator,form-qc-checker",
-        "accepted_modules": "ENROLL,UDS,FTLD,LBD",
-        "prioritized_modules": "UDS",
+        "accepted_modules": "UDS,ENROLL,FTLD,LBD",
         "queue_tags": "queued",
         "source_email": "",
         "apikey_path_prefix": "/sandbox/flywheel/gearbot",
