--- a/gear/form_scheduler/src/docker/manifest.json
+++ b/gear/form_scheduler/src/docker/manifest.json
@@ -2,7 +2,7 @@
     "name": "form-scheduler",
     "label": "Form Scheduler",
     "description": "Queues project files for the submission pipeline",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/form-scheduler:0.0.3"
+            "image": "naccdata/form-scheduler:0.0.4"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
@@ -51,7 +51,12 @@
         "source_email": {
             "description": "The source email; if not provided, will not send emails",
             "type": "string",
-            "default": ""
+            "default": "no-reply@naccdata.com"
+        },
+        "portal_url_path": {
+            "description": "Parameter path for the portal URL",
+            "type": "string",
+            "default": "/prod/flywheel/portal"
         },
         "apikey_path_prefix": {
             "description": "The instance specific AWS parameter path prefix for apikey",
