--- a/gear/form_screening/src/data/form-scheduler-configs.json
+++ b/gear/form_screening/src/data/form-scheduler-configs.json
@@ -5,6 +5,7 @@
         "accepted_modules": "UDS,ENROLL,FTLD,LBD",
         "queue_tags": "queued",
         "source_email": "",
+        "portal_url_path": "/sandbox/flywheel/portal",
         "apikey_path_prefix": "/sandbox/flywheel/gearbot",
         "dry_run": false
     }
