Allow extra configs

--- a/gear/form_screening/src/data/form-scheduler-configs.json
+++ b/gear/form_screening/src/data/form-scheduler-configs.json
@@ -4,7 +4,7 @@
         "submission_pipeline": "file-validator,identifier-lookup,form-transformer,form-qc-coordinator,form-qc-checker",
         "accepted_modules": "UDS,ENROLL,FTLD,LBD",
         "queue_tags": "queued",
-        "source_email": "",
+        "source_email": "no-reply@naccdata.com",
         "portal_url_path": "/sandbox/flywheel/portal",
         "apikey_path_prefix": "/sandbox/flywheel/gearbot",
         "dry_run": false
