--- a/gear/form_transformer/src/docker/BUILD
+++ b/gear/form_transformer/src/docker/BUILD
@@ -1,9 +1,9 @@
 file(name="manifest", source="manifest.json")
 
-docker_image(name="form-transformer",
+docker_image(name="csv-to-json-transformer",
              source="Dockerfile",
              dependencies=[
                  ":manifest",
                  "gear/form_transformer/src/python/form_csv_app:bin"
              ],
-             image_tags=["1.0.12", "latest"])
+             image_tags=["1.0.10", "latest"])
