--- a/gear/form_transformer/src/docker/manifest.json
+++ b/gear/form_transformer/src/docker/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "form-transformer",
-    "label": "Form CSV to JSON Transformer",
+    "name": "csv-to-json-transformer",
+    "label": "CSV to JSON Transformer",
     "description": "Form specific transformation from CSV to JSON",
-    "version": "1.0.12",
+    "version": "1.0.10",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/form-transformer:1.0.12"
+            "image": "naccdata/csv-to-json-transformer:1.0.10"
         },
         "flywheel": {
             "suite": "Curation",
@@ -56,6 +56,11 @@
         }
     },
     "config": {
+        "apikey_path_prefix": {
+            "description": "The instance specific AWS parameter gearbot path prefix",
+            "type": "string",
+            "default": "/prod/flywheel/gearbot"
+        },
         "downstream_gears": {
             "description": "Comma-delimited list of downstream gears",
             "type": "string",
