--- a/gear/form_transformer/src/docker/manifest.json
+++ b/gear/form_transformer/src/docker/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "csv-to-json-transformer",
-    "label": "CSV to JSON Transformer",
+    "name": "form-transformer",
+    "label": "Form CSV to JSON Transformer",
     "description": "Form specific transformation from CSV to JSON",
-    "version": "1.0.10",
+    "version": "1.0.12a",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/csv-to-json-transformer:1.0.10"
+            "image": "naccdata/form-transformer:1.0.12a"
         },
         "flywheel": {
             "suite": "Curation",
